--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <main class="main-section">
-      <section class="main-container">
+      <section class="card-container">
         <!-- QR Code Section-->
         <div class="qr-code-section">
           <img src="./images/image-qr-code.png" alt="" />
