Modified Semantic HTML elements

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <main class="main-section">
-      <section class="card-container">
+    <main>
+      <article class="card-container">
         <!-- QR Code Section-->
         <div class="qr-code-section">
           <img src="./images/image-qr-code.png" alt="" />
@@ -30,7 +30,7 @@
             the next level
           </p>
         </div>
-      </section>
+      </article>
     </main>
     <!-- Footer Section-->
     <footer class="footer-section">
@@ -38,7 +38,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="https://github.com/omerome83">Romel Williams</a>.
       </div>
     </footer>
   </body>
